Добавляет разметку Карточек Каталога

--- a/catalog.html
+++ b/catalog.html
@@ -290,7 +290,450 @@
 
         </section>
 
+        <!-- Карточки товаров Каталога -->
 
+        <section class="catalog catalog-page">
+
+          <div class="catalog-container container">
+            <h2 class="catalog-title title">Попробуйте самые популярные вкусы <br>нашего мороженого</h2>
+
+            <ul class="catalog-list list-reset">
+
+              <!-- Малинка -->
+
+              <li class="catalog-item">
+
+                <div class="catalog-wrapper">
+
+                  <a class="catalog-link" href="#">
+
+                    <figure class="catalog-image">
+                      <img src="#" width="168" height="168" alt="Шарик мороженого цвета малины.">
+                    </figure>
+
+                    <h3 class="catalog-title">Малинка</h3>
+
+                  </a>
+
+                  <p class="catalog-text">Сливочное мороженое с&nbsp;малиновым джемом</p>
+
+                  <div class="catalog-price-wrapper">
+
+                    <span class="catalog-price">310 ₽/кг</span>
+
+                    <a class="catalog-button" href="#">
+                      <span class="visually-hidden">Положить в корзину.</span>
+                    </a>
+
+                  </div>
+
+                </div>
+
+              </li>
+
+              <!-- Фисташка -->
+
+              <li class="catalog-item">
+
+                <div class="catalog-wrapper">
+
+                  <a class="catalog-link" href="#">
+
+                    <figure class="catalog-image">
+                      <img src="#" width="168" height="168" alt="Шарик мороженого цвета фисташки с кусочками шоколада.">
+                    </figure>
+
+                    <h3 class="catalog-title">Фисташка</h3>
+
+                  </a>
+
+                  <p class="catalog-text">Фисташковый пломбир с&nbsp;кусочками шоколада</p>
+
+                  <div class="catalog-price-wrapper">
+
+                    <span class="catalog-price">340 ₽/кг</span>
+
+                    <a class="catalog-button" href="#">
+                      <span class="visually-hidden">Положить в корзину.</span>
+                    </a>
+
+                  </div>
+
+                </div>
+
+              </li>
+
+              <!-- Черника -->
+
+              <li class="catalog-item">
+
+                <div class="catalog-wrapper">
+
+                  <a class="catalog-link" href="#">
+
+                    <figure class="catalog-image">
+                      <img src="#" width="168" height="168" alt="Шарик мороженого белого цвета с черничным джемом.">
+                    </figure>
+
+                    <h3 class="catalog-title">Черника</h3>
+
+                  </a>
+
+                  <p class="catalog-text">Крем-брюле с&nbsp;черничным джемом</p>
+
+                  <div class="catalog-price-wrapper">
+
+                    <span class="catalog-price">330 ₽/кг</span>
+
+                    <a class="catalog-button" href="#">
+                      <span class="visually-hidden">Положить в корзину.</span>
+                    </a>
+
+                  </div>
+
+                </div>
+
+              </li>
+
+              <!-- Бабл-гам -->
+
+              <li class="catalog-item">
+
+                <div class="catalog-wrapper">
+
+                  <a class="catalog-link" href="#">
+
+                    <figure class="catalog-image">
+                      <img src="#" width="168" height="168"
+                        alt="Шарик мороженого голубого цвета с разноцветной присыпкой.">
+                    </figure>
+
+                    <h3 class="catalog-title">Бабл-гам</h3>
+
+                  </a>
+
+                  <p class="catalog-text">Ванильный пломбир со&nbsp;сладкой посыпкой</p>
+
+                  <div class="catalog-price-wrapper">
+
+                    <span class="catalog-price">320 ₽/кг</span>
+
+                    <a class="catalog-button" href="#">
+                      <span class="visually-hidden">Положить в корзину.</span>
+                    </a>
+
+                  </div>
+
+                </div>
+
+              </li>
+
+              <!-- Ежевика -->
+
+              <li class="catalog-item">
+
+                <div class="catalog-wrapper">
+
+                  <a class="catalog-link" href="#">
+
+                    <figure class="catalog-image">
+                      <img src="#" width="168" height="168" alt="Шарик мороженого фиолетового цвета.">
+                    </figure>
+
+                    <h3 class="catalog-title">Ежевика</h3>
+
+                  </a>
+
+                  <p class="catalog-text">Сливочное мороженое с ежевичным джемом</p>
+
+                  <div class="catalog-price-wrapper">
+
+                    <span class="catalog-price">330 ₽/кг</span>
+
+                    <a class="catalog-button" href="#">
+                      <span class="visually-hidden">Положить в корзину.</span>
+                    </a>
+
+                  </div>
+
+                </div>
+
+              </li>
+
+              <!-- Банан -->
+
+              <li class="catalog-item">
+
+                <div class="catalog-wrapper">
+
+                  <a class="catalog-link" href="#">
+
+                    <figure class="catalog-image">
+                      <img src="#" width="168" height="168" alt="Шарик мороженого жёлтого цвета.">
+                    </figure>
+
+                    <h3 class="catalog-title">Банан</h3>
+
+                  </a>
+
+                  <p class="catalog-text">Сливочный пломбир с банановым вкусом</p>
+
+                  <div class="catalog-price-wrapper">
+
+                    <span class="catalog-price">340 ₽/кг</span>
+
+                    <a class="catalog-button" href="#">
+                      <span class="visually-hidden">Положить в корзину.</span>
+                    </a>
+
+                  </div>
+
+                </div>
+
+              </li>
+
+              <!-- Шоколадка -->
+
+              <li class="catalog-item">
+
+                <div class="catalog-wrapper">
+
+                  <a class="catalog-link" href="#">
+
+                    <figure class="catalog-image">
+                      <img src="#" width="168" height="168" alt="Шарик мороженого шоколадного цвета.">
+                    </figure>
+
+                    <h3 class="catalog-title">Шоколадка</h3>
+
+                  </a>
+
+                  <p class="catalog-text">Классический шоколадный пломбир</p>
+
+                  <div class="catalog-price-wrapper">
+
+                    <span class="catalog-price">270 ₽/кг</span>
+
+                    <a class="catalog-button" href="#">
+                      <span class="visually-hidden">Положить в корзину.</span>
+                    </a>
+
+                  </div>
+
+                </div>
+
+              </li>
+
+              <!-- Клубничка -->
+
+              <li class="catalog-item">
+
+                <div class="catalog-wrapper">
+
+                  <a class="catalog-link" href="#">
+
+                    <figure class="catalog-image">
+                      <img src="#" width="168" height="168" alt="Шарик мороженого розового цвета.">
+                    </figure>
+
+                    <h3 class="catalog-title">Клубничка</h3>
+
+                  </a>
+
+                  <p class="catalog-text">Сливочный пломбир с клубничным вкусом</p>
+
+                  <div class="catalog-price-wrapper">
+
+                    <span class="catalog-price">300 ₽/кг</span>
+
+                    <a class="catalog-button" href="#">
+                      <span class="visually-hidden">Положить в корзину.</span>
+                    </a>
+
+                  </div>
+
+                </div>
+
+              </li>
+
+              <!-- Лимон -->
+
+              <li class="catalog-item">
+
+                <div class="catalog-wrapper">
+
+                  <a class="catalog-link" href="#">
+
+                    <figure class="catalog-image">
+                      <img src="#" width="168" height="168" alt="Шарик мороженого лимонового цвета.">
+                    </figure>
+
+                    <h3 class="catalog-title">Лимон</h3>
+
+                  </a>
+
+                  <p class="catalog-text">Освежающий лимонный сорбет</p>
+
+                  <div class="catalog-price-wrapper">
+
+                    <span class="catalog-price">310 ₽/кг</span>
+
+                    <a class="catalog-button" href="#">
+                      <span class="visually-hidden">Положить в корзину.</span>
+                    </a>
+
+                  </div>
+
+                </div>
+
+              </li>
+
+              <!-- Ментол -->
+
+              <li class="catalog-item">
+
+                <div class="catalog-wrapper">
+
+                  <a class="catalog-link" href="#">
+
+                    <figure class="catalog-image">
+                      <img src="#" width="168" height="168" alt="Шарик мороженого холодно-голубого цвета.">
+                    </figure>
+
+                    <h3 class="catalog-title">Ментол</h3>
+
+                  </a>
+
+                  <p class="catalog-text">Сливочный пломбир с ментоловым сиропом</p>
+
+                  <div class="catalog-price-wrapper">
+
+                    <span class="catalog-price">320 ₽/кг</span>
+
+                    <a class="catalog-button" href="#">
+                      <span class="visually-hidden">Положить в корзину.</span>
+                    </a>
+
+                  </div>
+
+                </div>
+
+              </li>
+
+              <!-- Орешек -->
+
+              <li class="catalog-item">
+
+                <div class="catalog-wrapper">
+
+                  <a class="catalog-link" href="#">
+
+                    <figure class="catalog-image">
+                      <img src="#" width="168" height="168"
+                        alt="Шарик мороженого фисташкового цвета, политый шоколадом.">
+                    </figure>
+
+                    <h3 class="catalog-title">Орешек</h3>
+
+                  </a>
+
+                  <p class="catalog-text">Фисташковый пломбир с шоколадным сиропом</p>
+
+                  <div class="catalog-price-wrapper">
+
+                    <span class="catalog-price">360 ₽/кг</span>
+
+                    <a class="catalog-button" href="#">
+                      <span class="visually-hidden">Положить в корзину.</span>
+                    </a>
+
+                  </div>
+
+                </div>
+
+              </li>
+
+              <!-- Крем-брюле -->
+
+              <li class="catalog-item">
+
+                <div class="catalog-wrapper">
+
+                  <a class="catalog-link" href="#">
+
+                    <figure class="catalog-image">
+                      <img src="#" width="168" height="168" alt="Шарик мороженого кремового цвета.">
+                    </figure>
+
+                    <h3 class="catalog-title">Крем-брюле</h3>
+
+                  </a>
+
+                  <p class="catalog-text">Классическое крем-брюле</p>
+
+                  <div class="catalog-price-wrapper">
+
+                    <span class="catalog-price">280 ₽/кг</span>
+
+                    <a class="catalog-button" href="#">
+                      <span class="visually-hidden">Положить в корзину.</span>
+                    </a>
+
+                  </div>
+
+                </div>
+
+              </li>
+
+            </ul>
+
+            <div class="pagination">
+
+              <!-- Кнопка Показать еще -->
+
+              <button class="pagination-button-more button" type="button">Показать еще</button>
+
+              <!-- Хлебные крошки Карточек Каталога -->
+
+              <div class="pagination-container">
+
+                <button class="pagination-arrow pagination-arrow-prev pagination-arrow-disabled" type="button">
+                  <span class="visually-hidden">Предыдущая страница.</span>
+                </button>
+
+                <ul class="pagination-list list-reset">
+                  <li class="pagination-item">
+                    <a class="pagination-link pagination-link-current" href="#" aria-current="page">1</a>
+                  </li>
+
+                  <li class="pagination-item">
+                    <a class="pagination-link" href="#">2</a>
+                  </li>
+
+                  <li class="pagination-item">
+                    <a class="pagination-link" href="#">3</a>
+                  </li>
+
+                  <li class="pagination-item">
+                    <a class="pagination-link" href="#">4</a>
+                  </li>
+
+                  <li class="pagination-item">
+                    <a class="pagination-link" href="#">5</a>
+                  </li>
+                </ul>
+
+                <button class="pagination-arrow pagination-arrow-next" type="button">
+                  <span class="visually-hidden">Следующая страница.</span>
+                </button>
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </section>
 
       </main>
 
