--- a/catalog.html
+++ b/catalog.html
@@ -26,7 +26,7 @@
 
             <!-- Логотип Шапки -->
 
-            <a class="logo" href="#">
+            <a class="logo" href="index.html">
               <img src="#" width="137" height="56" alt="Логотип интернет-магазина мороженого Глейси.">
             </a>
 
