Добавляет всем спискам класс list-reset

--- a/catalog.html
+++ b/catalog.html
@@ -32,7 +32,7 @@
 
             <!-- Навигация по сайту -->
 
-            <ul class="nav-menu">
+            <ul class="nav-menu list-reset">
 
               <li class="nav-item dropdown">
 
@@ -57,7 +57,7 @@
 
             <a class="nav-phone" href="tel:+78005558628">+7 800 555-86-28</a>
 
-            <ul class="nav-user user-menu">
+            <ul class="nav-user user-menu list-reset">
 
               <li class="user-item user-item-search dropdown">
 
@@ -748,7 +748,7 @@
 
           <h3 class="visually-hidden">Социальные сети</h3>
 
-          <ul class="social-list page-footer-social">
+          <ul class="social-list page-footer-social list-reset">
 
             <li class="social-item">
 
@@ -779,7 +779,7 @@
 
           <!-- Меню Навигации Подвала -->
 
-          <ul class="footer-navigation-menu">
+          <ul class="footer-navigation-menu list-reset">
 
             <li class="footer-navigation-item">
               <a class="footer-navigation-link footer-navigation-link-favorites" href="#">Для поставщиков</a>
