--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <!-- Навигация по сайту -->
 
-            <ul class="nav-menu">
+            <ul class="nav-menu list-reset">
 
               <li class="nav-item dropdown">
 
@@ -57,7 +57,7 @@
 
             <a class="nav-phone" href="tel:+78005558628">+7 800 555-86-28</a>
 
-            <ul class="nav-user user-menu">
+            <ul class="nav-user user-menu list-reset">
 
               <li class="user-item user-item-search dropdown">
 
@@ -216,7 +216,7 @@
 
             <h3 class="visually-hidden">Социальные сети</h3>
 
-            <ul class="social-list slider-social">
+            <ul class="social-list slider-social list-reset">
 
               <li class="social-item">
 
@@ -258,7 +258,7 @@
 
             <!-- Малинка даром! -->
 
-            <ul class="presents-list">
+            <ul class="presents-list list-reset">
 
               <li class="presents-item presents-item-raspberry">
 
@@ -632,7 +632,7 @@
 
           <h3 class="visually-hidden">Социальные сети</h3>
 
-          <ul class="social-list page-footer-social">
+          <ul class="social-list page-footer-social list-reset">
 
             <li class="social-item">
 
@@ -663,7 +663,7 @@
 
           <!-- Меню Навигации Подвала -->
 
-          <ul class="footer-navigation-menu">
+          <ul class="footer-navigation-menu list-reset">
 
             <li class="footer-navigation-item">
               <a class="footer-navigation-link footer-navigation-link-favorites" href="#">Для поставщиков</a>
