Добавляет заголовок для section promo на index.html

--- a/index.html
+++ b/index.html
@@ -469,6 +469,7 @@
         <!-- Ссылка на блог -->
 
         <section class="promo">
+          <h2 class="visually-hidden">Новое в блоге и подписка на рассылку</h2>
 
           <div class="promo-container container">
 
