--- a/catalog.html
+++ b/catalog.html
@@ -147,8 +147,9 @@
               <fieldset class="filter-fieldset filter-fieldset-select">
                 <h3 class="filter-form-legend">Сортировка:</h3>
 
-                <select class="filter-select" aria-label="Сортировка">
-                  <option value="popular" selected>Популярности</option>
+                <select class="filter-select" aria-label="Сортировка" name="sort">
+                  <option value="popular" selected>По популярности</option>
+                  <option value="price">По цене</option>
                 </select>
 
               </fieldset>
