Исправляет заголовок в Фильтре по цене

--- a/catalog.html
+++ b/catalog.html
@@ -159,7 +159,7 @@
               <fieldset class="filter-fieldset filter-fieldset-price">
 
                 <div class="range-container-inputs">
-                  <h3 class="filter-form-legend">Цена: 100 ₽ – 500 ₽</h3>
+                  <h3 class="filter-form-legend">Цена:&nbsp;</h3>
 
                   <label class="filter-label" for="range-min">
                     <input class="range-input range-input-min" id="range-min" type="number" value="100"
