Добавляет скрытый заголовок в раздел catalog на catalog.html, удаляет неверный заголовок

--- a/catalog.html
+++ b/catalog.html
@@ -295,9 +295,8 @@
         <!-- Карточки товаров Каталога -->
 
         <section class="catalog catalog-page">
-
+          <h2 class="visually-hidden">Каталог мороженого.</h2>
           <div class="catalog-container container">
-            <h2 class="catalog-title title">Попробуйте самые популярные вкусы <br>нашего мороженого</h2>
 
             <ul class="catalog-list list-reset">
 
