--- a/2/index.html
+++ b/2/index.html
@@ -4,6 +4,7 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Интернет-магазин мороженого "Глейси"</title>
     <base href="https://htmlacademy-htmlcss.github.io/2209519-gllacy-1/2/">
 </head>
@@ -26,13 +27,13 @@
 
             <!-- Логотип Шапки -->
 
-            <a class="logo" href="#">
+            <a class="logo" href="index.html" aria-current="page">
               <img src="#" width="137" height="56" alt="Логотип интернет-магазина мороженого Глейси.">
             </a>
 
             <!-- Навигация по сайту -->
 
-            <ul class="nav-menu">
+            <ul class="nav-menu list-reset">
 
               <li class="nav-item dropdown">
 
@@ -57,7 +58,7 @@
 
             <a class="nav-phone" href="tel:+78005558628">+7 800 555-86-28</a>
 
-            <ul class="nav-user user-menu">
+            <ul class="nav-user user-menu list-reset">
 
               <li class="user-item user-item-search dropdown">
 
@@ -216,7 +217,7 @@
 
             <h3 class="visually-hidden">Социальные сети</h3>
 
-            <ul class="social-list slider-social">
+            <ul class="social-list slider-social list-reset">
 
               <li class="social-item">
 
@@ -258,7 +259,7 @@
 
             <!-- Малинка даром! -->
 
-            <ul class="presents-list">
+            <ul class="presents-list list-reset">
 
               <li class="presents-item presents-item-raspberry">
 
@@ -469,6 +470,7 @@
         <!-- Ссылка на блог -->
 
         <section class="promo">
+          <h2 class="visually-hidden">Новое в блоге и подписка на рассылку</h2>
 
           <div class="promo-container container">
 
@@ -632,7 +634,7 @@
 
           <h3 class="visually-hidden">Социальные сети</h3>
 
-          <ul class="social-list page-footer-social">
+          <ul class="social-list page-footer-social list-reset">
 
             <li class="social-item">
 
@@ -663,7 +665,7 @@
 
           <!-- Меню Навигации Подвала -->
 
-          <ul class="footer-navigation-menu">
+          <ul class="footer-navigation-menu list-reset">
 
             <li class="footer-navigation-item">
               <a class="footer-navigation-link footer-navigation-link-favorites" href="#">Для поставщиков</a>
