Добавляет Графику для всех страниц

--- a/catalog.html
+++ b/catalog.html
@@ -27,7 +27,8 @@
             <!-- Логотип Шапки -->
 
             <a class="logo" href="index.html">
-              <img src="#" width="137" height="56" alt="Логотип интернет-магазина мороженого Глейси.">
+              <img src="images/logo-gllacy.svg" width="137" height="56"
+                alt="Логотип интернет-магазина мороженого Глейси.">
             </a>
 
             <!-- Навигация по сайту -->
@@ -309,7 +310,8 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168" alt="Шарик мороженого цвета малины.">
+                      <img src="images/catalog/catalog-item-1.jpg" width="168" height="168"
+                        alt="Шарик мороженого цвета малины.">
                     </figure>
 
                     <h3 class="catalog-title">Малинка</h3>
@@ -341,7 +343,8 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168" alt="Шарик мороженого цвета фисташки с кусочками шоколада.">
+                      <img src="images/catalog/catalog-item-2.jpg" width="168" height="168"
+                        alt="Шарик мороженого цвета фисташки с кусочками шоколада.">
                     </figure>
 
                     <h3 class="catalog-title">Фисташка</h3>
@@ -373,7 +376,8 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168" alt="Шарик мороженого белого цвета с черничным джемом.">
+                      <img src="images/catalog/catalog-item-3.jpg" width="168" height="168"
+                        alt="Шарик мороженого белого цвета с черничным джемом.">
                     </figure>
 
                     <h3 class="catalog-title">Черника</h3>
@@ -405,7 +409,7 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168"
+                      <img src="images/catalog/catalog-item-4.jpg" width="168" height="168"
                         alt="Шарик мороженого голубого цвета с разноцветной присыпкой.">
                     </figure>
 
@@ -438,7 +442,8 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168" alt="Шарик мороженого фиолетового цвета.">
+                      <img src="images/catalog/catalog-item-5.jpg" width="168" height="168"
+                        alt="Шарик мороженого фиолетового цвета.">
                     </figure>
 
                     <h3 class="catalog-title">Ежевика</h3>
@@ -470,7 +475,8 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168" alt="Шарик мороженого жёлтого цвета.">
+                      <img src="images/catalog/catalog-item-6.jpg" width="168" height="168"
+                        alt="Шарик мороженого жёлтого цвета.">
                     </figure>
 
                     <h3 class="catalog-title">Банан</h3>
@@ -502,7 +508,8 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168" alt="Шарик мороженого шоколадного цвета.">
+                      <img src="images/catalog/catalog-item-7.jpg" width="168" height="168"
+                        alt="Шарик мороженого шоколадного цвета.">
                     </figure>
 
                     <h3 class="catalog-title">Шоколадка</h3>
@@ -534,7 +541,8 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168" alt="Шарик мороженого розового цвета.">
+                      <img src="images/catalog/catalog-item-8.jpg" width="168" height="168"
+                        alt="Шарик мороженого розового цвета.">
                     </figure>
 
                     <h3 class="catalog-title">Клубничка</h3>
@@ -566,7 +574,8 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168" alt="Шарик мороженого лимонового цвета.">
+                      <img src="images/catalog/catalog-item-9.jpg" width="168" height="168"
+                        alt="Шарик мороженого лимонового цвета.">
                     </figure>
 
                     <h3 class="catalog-title">Лимон</h3>
@@ -598,7 +607,8 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168" alt="Шарик мороженого холодно-голубого цвета.">
+                      <img src="images/catalog/catalog-item-10.jpg" width="168" height="168"
+                        alt="Шарик мороженого холодно-голубого цвета.">
                     </figure>
 
                     <h3 class="catalog-title">Ментол</h3>
@@ -630,7 +640,7 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168"
+                      <img src="images/catalog/catalog-item-11.jpg" width="168" height="168"
                         alt="Шарик мороженого фисташкового цвета, политый шоколадом.">
                     </figure>
 
@@ -663,7 +673,8 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168" alt="Шарик мороженого кремового цвета.">
+                      <img src="images/catalog/catalog-item-12.jpg" width="168" height="168"
+                        alt="Шарик мороженого кремового цвета.">
                     </figure>
 
                     <h3 class="catalog-title">Крем-брюле</h3>
@@ -803,8 +814,9 @@
 
           <div class="page-footer-copyright">
 
-            <a class="page-footer-copyright-logo" href="#">
-              <img class="academy-logo" src="#" width="93" height="27" alt="Логотип htmlacademy.">
+            <a class="page-footer-copyright-logo" href="https://htmlacademy.ru/">
+              <img class="academy-logo" src="images/logo-htmlacademy.svg" width="93" height="27"
+                alt="Логотип htmlacademy.">
             </a>
 
             <p class="page-footer-copyright-info">Сделано в <a href="https://htmlacademy.ru/">.html academy</a> &#169;
