--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
             <!-- Логотип Шапки -->
 
             <a class="logo" href="index.html" aria-current="page">
-              <img src="#" width="137" height="56" alt="Логотип интернет-магазина мороженого Глейси.">
+              <img src="images/logo-gllacy.svg" width="137" height="56"
+                alt="Логотип интернет-магазина мороженого Глейси.">
             </a>
 
             <!-- Навигация по сайту -->
@@ -131,7 +132,8 @@
                 </div>
 
                 <div class="slide-image">
-                  <img src="#" width="66" height="150" alt="Нежный пломбир с клубничным джемом.">
+                  <img src="images/slider/slide-1.png" width="66" height="150"
+                    alt="Нежный пломбир с клубничным джемом.">
                 </div>
 
               </div>
@@ -152,7 +154,8 @@
                 </div>
 
                 <div class="slide-image">
-                  <img src="#" width="66" height="150" alt="Сливочное мороженое со вкусом банана.">
+                  <img src="images/slider/slide-2.png" width="66" height="150"
+                    alt="Сливочное мороженое со вкусом банана.">
                 </div>
 
               </div>
@@ -173,7 +176,7 @@
                 </div>
 
                 <div class="slide-image">
-                  <img src="#" width="66" height="150" alt="Карамельный пломбир с маршмеллоу.">
+                  <img src="images/slider/slide-3.png" width="66" height="150" alt="Карамельный пломбир с маршмеллоу.">
                 </div>
 
               </div>
@@ -309,7 +312,8 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168" alt="Шарик мороженого цвета малины.">
+                      <img src="images/catalog/catalog-item-1.jpg" width="168" height="168"
+                        alt="Шарик мороженого цвета малины.">
                     </figure>
 
                     <h3 class="catalog-title">Малинка</h3>
@@ -341,7 +345,8 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168" alt="Шарик мороженого цвета фисташки с кусочками шоколада.">
+                      <img src="images/catalog/catalog-item-2.jpg" width="168" height="168"
+                        alt="Шарик мороженого цвета фисташки с кусочками шоколада.">
                     </figure>
 
                     <h3 class="catalog-title">Фисташка</h3>
@@ -373,7 +378,8 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168" alt="Шарик мороженого белого цвета с черничным джемом.">
+                      <img src="images/catalog/catalog-item-3.jpg" width="168" height="168"
+                        alt="Шарик мороженого белого цвета с черничным джемом.">
                     </figure>
 
                     <h3 class="catalog-title">Черника</h3>
@@ -405,7 +411,7 @@
                   <a class="catalog-link" href="#">
 
                     <figure class="catalog-image">
-                      <img src="#" width="168" height="168"
+                      <img src="images/catalog/catalog-item-4.jpg" width="168" height="168"
                         alt="Шарик мороженого голубого цвета с разноцветной присыпкой.">
                     </figure>
 
@@ -688,8 +694,9 @@
 
           <div class="page-footer-copyright">
 
-            <a class="page-footer-copyright-logo" href="#">
-              <img class="academy-logo" src="#" width="93" height="27" alt="Логотип htmlacademy.">
+            <a class="page-footer-copyright-logo" href="https://htmlacademy.ru/">
+              <img class="academy-logo" src="images/logo-htmlacademy.svg" width="93" height="27"
+                alt="Логотип htmlacademy.">
             </a>
 
             <p class="page-footer-copyright-info">Сделано в <a href="https://htmlacademy.ru/">.html academy</a> &#169;
