Убирает лишние переносы текста и тегов

--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
 
                 <h2 class="slide-caption">Нежный пломбир с&nbsp;клубничным джемом</h2>
 
-                <p class="slide-description">Натуральное мороженое из&nbsp;свежих сливок и&nbsp;молока
-                  с&nbsp;вкуснейшим клубничным джемом&nbsp;&mdash; это идеальный десерт для всей семьи.</p>
+                <p class="slide-description">Натуральное мороженое из&nbsp;свежих сливок и&nbsp;молока с&nbsp;вкуснейшим клубничным джемом&nbsp;&mdash; это идеальный десерт для всей семьи.</p>
 
                 <a class="slide-link button" href="#">Заказать</a>
 
@@ -144,8 +143,7 @@
 
                 <h2 class="slide-caption">Сливочное мороженое со&nbsp;вкусом банана</h2>
 
-                <p class="slide-description">Сливочное мороженое с&nbsp;ярким банановым вкусом подарит вам свежесть
-                  и&nbsp;наслаждение даже в&nbsp;самый жаркий летний день.</p>
+                <p class="slide-description">Сливочное мороженое с&nbsp;ярким банановым вкусом подарит вам свежесть и&nbsp;наслаждение даже в&nbsp;самый жаркий летний день.</p>
 
                 <a class="slide-link button" href="#">Заказать</a>
 
@@ -165,8 +163,7 @@
 
                 <h2 class="slide-caption">Карамельный пломбир с&nbsp;маршмеллоу</h2>
 
-                <p class="slide-description">Необычный сладкий десерт с&nbsp;карамельным топпингом и&nbsp;кусочками
-                  зефира завоюет сердца сладкоежек всех возрастов</p>
+                <p class="slide-description">Необычный сладкий десерт с&nbsp;карамельным топпингом и&nbsp;кусочками зефира завоюет сердца сладкоежек всех возрастов</p>
 
                 <a class="slide-link button" href="#">Заказать</a>
 
@@ -264,8 +261,7 @@
 
               <h3 class="presents-subtitle">Малинка даром!</h3>
 
-              <p class="presents-description">При покупке 2 кг любого фруктового мороженого добавим в&nbsp;ваш заказ
-                банку малинового варенья бесплатно.</p>
+              <p class="presents-description">При покупке 2 кг любого фруктового мороженого добавим в&nbsp;ваш заказ банку малинового варенья бесплатно.</p>
 
               <a class="presents-button button" href="#">Хочу подарок</a>
 
@@ -277,8 +273,7 @@
 
               <h3 class="presents-subtitle">Маршмеллоу даром!</h3>
 
-              <p class="presents-description">При покупке 2 кг пломбира добавим в&nbsp;ваш заказ упаковку нежных
-                зефирок совершенно бесплатно.</p>
+              <p class="presents-description">При покупке 2 кг пломбира добавим в&nbsp;ваш заказ упаковку нежных зефирок совершенно бесплатно.</p>
 
               <a class="presents-button button" href="#">Хочу подарок</a>
 
@@ -442,20 +437,14 @@
 
           <div class="about-wrapper">
 
-            <h2 class="about-title title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого
-              собственного производства на развес</h2>
+            <h2 class="about-title title">Магазин Глейси – это онлайн и офлайн-магазин по продаже мороженого собственного производства на развес</h2>
 
             <ul class="about-list list-reset">
 
-              <li class="about-item about-item-production">Всё наше мороженое изготавливается на собственном
-                производстве с использованием современного оборудования и проверенных временем технологий.</li>
-              <li class="about-item about-item-ingredients">Закупка ингредиентов производится только
-                у&nbsp;проверенных фермерских хозяйств, с которыми нас&nbsp;связывает долговременное сотрудничество.
-              </li>
-              <li class="about-item about-item-quality">Для приготовления мороженого используются сливки и молоко
-                высочайшего качества. Все ингредиенты и&nbsp;добавки произведены из натурального сырья.</li>
-              <li class="about-item about-item-delivery">Доставка нашего мороженого осуществляется в специальном
-                термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</li>
+              <li class="about-item about-item-production">Всё наше мороженое изготавливается на собственном производстве с использованием современного оборудования и проверенных временем технологий.</li>
+              <li class="about-item about-item-ingredients">Закупка ингредиентов производится только у&nbsp;проверенных фермерских хозяйств, с которыми нас&nbsp;связывает долговременное сотрудничество.</li>
+              <li class="about-item about-item-quality">Для приготовления мороженого используются сливки и молоко высочайшего качества. Все ингредиенты и&nbsp;добавки произведены из натурального сырья.</li>
+              <li class="about-item about-item-delivery">Доставка нашего мороженого осуществляется в специальном термопаке, который не даёт мороженому растаять и позволяет сохранить превосходный вкус.</li>
 
             </ul>
 
@@ -487,7 +476,7 @@
 
               <h2 class="visually-hidden">Подписка на рассылку</h2>
 
-              <p class="newsletter-description">Подпишитесь на нашу сладкую рассылку и будьте всегда в&nbsp;курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды. Честно =)</p>
+              <p class="newsletter-description">Подпишитесь на нашу сладкую рассылку и будьте всегда в&nbsp;курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой ненужной ерунды.Честно =)</p>
 
               <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
 
