Создаёт и подключает к страницам стилевой файл

--- a/catalog.html
+++ b/catalog.html
@@ -5,6 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="styles/styles.css" rel="stylesheet">
   <title>Каталог Интернет-магазина мороженого "Глейси"</title>
 </head>
 
