--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <li class="user-item user-item-login dropdown">
 
               <a class="user-link user-link-login dropdown-nav-link" href="#">
-                <span class="visually-hidden">Вход</span>
+                <span class="text-login">Вход</span>
               </a>
 
               <!-- Всплывающий блок -->
