--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
             <img class="academy-logo" src="images/logo-htmlacademy.svg" width="93" height="27" alt="Логотип htmlacademy.">
           </a>
 
-          <p class="page-footer-copyright-info">Сделано в <a href="https://htmlacademy.ru/">.html academy</a> &#169; 2021</p>
+          <p class="page-footer-copyright-info">Сделано в <a class="page-footer-copyright-link" href="https://htmlacademy.ru/">.html academy</a> &#169; 2021</p>
 
         </div>
 
