--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
 
         <div class="catalog-container container">
 
-          <h2 class="catalog-title title">Попробуйте самые популярные вкусы <br>нашего мороженого</h2>
+          <h2 class="catalog-title-common title">Попробуйте самые популярные вкусы <br>нашего мороженого</h2>
 
           <!-- Малинка -->
 
