Реализует сетку Раздела Доставка на grid

--- a/index.html
+++ b/index.html
@@ -551,7 +551,7 @@
 
               <!-- Дата -->
 
-              <fieldset class="order-form-group order-form-group-date">
+              <fieldset class="order-form-item order-form-item-date">
 
                 <div class="order-form-tooltip">
 
