--- a/index.html
+++ b/index.html
@@ -191,10 +191,16 @@
 
               <button class="slider-arrow slider-arrow-prev" type="button">
                 <span class="visually-hidden">Предыдущий слайд.</span>
+                <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M9.71 13.14a.67.67 0 0 0 .94-.95L6.45 8l4.2-4.2a.66.66 0 0 0-.94-.94L5.04 7.52a.66.66 0 0 0 0 .94l4.67 4.68Z" fill="#FCFCFC" />
+                </svg>
               </button>
 
               <button class="slider-arrow slider-arrow-next" type="button">
                 <span class="visually-hidden">Следующий слайд.</span>
+                <svg width="17" height="16" viewBox="0 0 17 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M7.29 2.86a.66.66 0 1 0-.94.95l4.2 4.2-4.2 4.2a.67.67 0 0 0 .94.94l4.67-4.67a.66.66 0 0 0 0-.94L7.3 2.86Z" fill="#FCFCFC" />
+                </svg>
               </button>
 
             </div>
