--- a/8/index.html
+++ b/8/index.html
@@ -36,12 +36,42 @@
 
           <ul class="nav-menu list-reset">
 
-            <li class="nav-item dropdown">
+            <li class="nav-item nav-item-catalog dropdown">
 
-              <a class="nav-link dropdown-nav-link" href="catalog.html">Каталог</a>
+              <a class="nav-link nav-link-catalog dropdown-nav-link" href="#">Каталог</a>
 
               <!-- Всплывающий блок -->
-              <div class="nav-drop dropdown-container"></div>
+              <div class="nav-drop dropdown-container">
+
+                <div class="dropdown-wrapper">
+
+                  <ul class="nav-drop-list list-reset">
+
+                    <li class="nav-drop-item">
+                      <a class="nav-drop-link nav-drop-link-new-products" href="#">Новинки</a>
+                    </li>
+
+                    <li class="nav-drop-item">
+                      <a class="nav-drop-link" href="catalog.html">Сливочное</a>
+                    </li>
+
+                    <li class="nav-drop-item">
+                      <a class="nav-drop-link" href="#">Щербеты</a>
+                    </li>
+
+                    <li class="nav-drop-item">
+                      <a class="nav-drop-link" href="#">Фруктовый лёд</a>
+                    </li>
+
+                    <li class="nav-drop-item">
+                      <a class="nav-drop-link" href="#">Мелорин</a>
+                    </li>
+
+                  </ul>
+
+                </div>
+
+              </div>
 
             </li>
 
@@ -65,8 +95,8 @@
 
               <a class="user-link user-link-search dropdown-nav-link" href="#">
                 <span class="visually-hidden">Поиск</span>
-                <svg aria-hidden="true" focusable="false" width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M1.66 6.19a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.44a.67.67 0 1 1-.94.95l-2.45-2.45Z" fill="#2D3440" />
+                <svg aria-hidden="true" focusable="false" width="14" height="14" viewBox="0 0 14 14" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M1.66 6.19a4.67 4.67 0 1 1 9.34 0 4.67 4.67 0 0 1-9.34 0Zm8.42 4.69a6 6 0 1 1 .94-.94l2.45 2.44a.67.67 0 1 1-.94.95l-2.45-2.45Z" />
                 </svg>
               </a>
 
@@ -78,8 +108,8 @@
             <li class="user-item user-item-login dropdown">
 
               <a class="user-link user-link-login dropdown-nav-link" href="#">
-                <svg aria-hidden="true" focusable="false" width="14" height="15" viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M8 1.52c0-.36.3-.66.67-.66h2.66a2 2 0 0 1 2 2v9.33a2 2 0 0 1-2 2H8.67a.67.67 0 0 1 0-1.33h2.66a.67.67 0 0 0 .67-.67V2.86a.67.67 0 0 0-.67-.67H8.67A.67.67 0 0 1 8 1.52Zm-3.14 2.2a.67.67 0 0 1 .94 0l3.33 3.33a.67.67 0 0 1 .2.47.66.66 0 0 1-.2.48L5.8 11.33a.67.67 0 1 1-.94-.94l2.2-2.2H.66a.67.67 0 1 1 0-1.33h6.4l-2.2-2.2a.67.67 0 0 1 0-.94Z" fill="#2D3440" />
+                <svg aria-hidden="true" focusable="false" width="14" height="15" viewBox="0 0 14 15" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M8 1.52c0-.36.3-.66.67-.66h2.66a2 2 0 0 1 2 2v9.33a2 2 0 0 1-2 2H8.67a.67.67 0 0 1 0-1.33h2.66a.67.67 0 0 0 .67-.67V2.86a.67.67 0 0 0-.67-.67H8.67A.67.67 0 0 1 8 1.52Zm-3.14 2.2a.67.67 0 0 1 .94 0l3.33 3.33a.67.67 0 0 1 .2.47.66.66 0 0 1-.2.48L5.8 11.33a.67.67 0 1 1-.94-.94l2.2-2.2H.66a.67.67 0 1 1 0-1.33h6.4l-2.2-2.2a.67.67 0 0 1 0-.94Z" />
                 </svg>
                 <span class="text-login">Вход</span>
               </a>
@@ -92,8 +122,8 @@
             <li class="user-item user-item-basket dropdown">
 
               <a class="user-link user-link-basket dropdown-nav-link" href="#">
-                <svg aria-hidden="true" focusable="false" width="15" height="14" viewBox="0 0 15 14" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path fill-rule="evenodd" clip-rule="evenodd" d="M1.17.1a.67.67 0 1 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14.65a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" fill="#2D3440" />
+                <svg aria-hidden="true" focusable="false" width="15" height="14" viewBox="0 0 15 14" xmlns="http://www.w3.org/2000/svg">
+                  <path fill-rule="evenodd" clip-rule="evenodd" d="M1.17.1a.67.67 0 1 0 0 1.34h1.77l.47 2.34v.05l.97 4.83a1.83 1.83 0 0 0 1.82 1.47h5.62a1.83 1.83 0 0 0 1.82-1.47l.93-4.86a.67.67 0 0 0-.66-.8h-9.3L4.14.65a.67.67 0 0 0-.66-.53H1.17Zm4.52 8.3-.81-4.06h8.23l-.78 4.07a.5.5 0 0 1-.49.39H6.18a.5.5 0 0 1-.49-.4Zm-1.13 3.96a1.25 1.25 0 1 1 2.49 0 1.25 1.25 0 0 1-2.5 0Zm6.37 0a1.25 1.25 0 1 1 2.5 0 1.25 1.25 0 0 1-2.5 0Z" />
                 </svg>
                 <span class="visually-hidden">Корзина</span>
                 <span class="basket-counter">2 товара</span>
