Исправляет и завершает реализацию Поповера элемента "Каталог" Навигации Главной страницы

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
           <ul class="nav-menu list-reset">
 
-            <li class="nav-item nav-item-catalog dropdown">
+            <li class="nav-item dropdown">
 
               <a class="nav-link nav-link-catalog dropdown-nav-link" href="#">Каталог</a>
 
@@ -47,7 +47,7 @@
                   <ul class="nav-drop-list list-reset">
 
                     <li class="nav-drop-item">
-                      <a class="nav-drop-link nav-drop-link-new-products" href="#">Новинки</a>
+                      <a class="nav-drop-link nav-drop-link-new-products" href="#">Новинки</a><span></span>
                     </li>
 
                     <li class="nav-drop-item">
