Реализует Поповер элемента "Каталог" Навигации Каталога

--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,37 @@
               <a class="nav-link dropdown-nav-link" href="catalog.html">Каталог</a>
 
               <!-- Всплывающий блок -->
-              <div class="nav-drop dropdown-container"></div>
+              <div class="nav-drop dropdown-container">
+
+                <div class="dropdown-wrapper">
+
+                  <ul class="nav-drop-list list-reset">
+
+                    <li class="nav-drop-item">
+                      <a class="nav-drop-link nav-drop-link-new-products" href="#">Новинки</a><span></span>
+                    </li>
+
+                    <li class="nav-drop-item">
+                      <a class="nav-drop-link nav-drop-link-current" href="catalog.html">Сливочное</a>
+                    </li>
+
+                    <li class="nav-drop-item">
+                      <a class="nav-drop-link" href="#">Щербеты</a>
+                    </li>
+
+                    <li class="nav-drop-item">
+                      <a class="nav-drop-link" href="#">Фруктовый лёд</a>
+                    </li>
+
+                    <li class="nav-drop-item">
+                      <a class="nav-drop-link" href="#">Мелорин</a>
+                    </li>
+
+                  </ul>
+
+                </div>
+
+              </div>
 
             </li>
 
