Завершает стилизацию Кнопки элемента "Каталог" Навигации Каталога

--- a/catalog.html
+++ b/catalog.html
@@ -37,7 +37,7 @@
 
             <li class="nav-item dropdown">
 
-              <a class="nav-link dropdown-nav-link" href="catalog.html">Каталог</a>
+              <a class="nav-link nav-link-catalog dropdown-nav-link" href="catalog.html">Каталог</a>
 
               <!-- Всплывающий блок -->
               <div class="nav-drop dropdown-container">
