Завершает стилизацию Фильтра товаров Каталога

--- a/catalog.html
+++ b/catalog.html
@@ -188,7 +188,8 @@
 
               <select class="filter-select" aria-label="Сортировка" name="sort">
                 <option value="popular" selected>По популярности</option>
-                <option value="price">По цене</option>
+                <option value="increase">По возрастанию цены</option>
+                <option value="decrease">По убыванию цены</option>
               </select>
 
             </fieldset>
