--- a/catalog.html
+++ b/catalog.html
@@ -100,7 +100,22 @@
               </a>
 
               <!-- Всплывающий блок -->
-              <div class="search dropdown-container"></div>
+              <div class="search dropdown-container">
+
+                <div class="dropdown-wrapper">
+
+                  <form class="search-form" method="get" action="https://echo.htmlacademy.ru/">
+
+                    <label for="search">
+                      <span class="visually-hidden">Поиск по сайту.</span>
+                      <input class="search-input input" type="search" name="search" id="search" placeholder="Поиск по сайту">
+                    </label>
+
+                  </form>
+
+                </div>
+
+              </div>
 
             </li>
 
