Реализует Тултипы в Форме для заказа Главной страницы

--- a/index.html
+++ b/index.html
@@ -686,8 +686,15 @@
 
                   <label class="order-form-label" for="date">Дата</label>
 
+                  <!-- Кнопка и подсказка -->
                   <div class="order-tooltip">
-                    <!-- Здесь будет кнопка и подсказка -->
+
+                    <button class="order-tooltip-toggle" type="button" aria-labelledby="info-label-date">
+                      <span class="visually-hidden">Дополнительная информация.</span>
+                    </button>
+
+                    <p class="order-tooltip-text" id="info-label-date">Введите дату доставки</p>
+
                   </div>
 
                 </div>
@@ -713,8 +720,15 @@
 
                   <label class="order-form-label" for="address">Адрес</label>
 
+                  <!-- Кнопка и подсказка -->
                   <div class="order-tooltip">
-                    <!-- Здесь будет кнопка и подсказка -->
+
+                    <button class="order-tooltip-toggle" type="button" aria-labelledby="info-label-address">
+                      <span class="visually-hidden">Дополнительная информация.</span>
+                    </button>
+
+                    <p class="order-tooltip-text" id="info-label-address">Введите адрес доставки</p>
+
                   </div>
 
                 </div>
