Исправляет Проект по Pixel Perfect

--- a/catalog.html
+++ b/catalog.html
@@ -622,7 +622,7 @@
 
                 </a>
 
-                <p class="catalog-text">Сливочный пломбир с банановым вкусом</p>
+                <p class="catalog-text">Сливочный пломбир <br>с банановым вкусом</p>
 
                 <div class="catalog-price-wrapper">
 
@@ -692,7 +692,7 @@
 
                 </a>
 
-                <p class="catalog-text">Сливочный пломбир с клубничным вкусом</p>
+                <p class="catalog-text">Сливочный пломбир <br>с клубничным вкусом</p>
 
                 <div class="catalog-price-wrapper">
 
@@ -762,7 +762,7 @@
 
                 </a>
 
-                <p class="catalog-text">Сливочный пломбир с ментоловым сиропом</p>
+                <p class="catalog-text">Сливочный пломбир <br>с ментоловым сиропом</p>
 
                 <div class="catalog-price-wrapper">
 
@@ -832,7 +832,7 @@
 
                 </a>
 
-                <p class="catalog-text">Классическое крем-брюле</p>
+                <p class="catalog-text">Классическое <br>крем-брюле</p>
 
                 <div class="catalog-price-wrapper">
 
