--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
 
         <div class="catalog-container container">
 
-          <h2 class="catalog-title-common title">Попробуйте самые популярные вкусы <br>нашего мороженого</h2>
+          <h2 class="catalog-title-common title">Попробуйте самые популярные <br>вкусы нашего мороженого</h2>
 
           <!-- Малинка -->
 
